logback日志集成，可按日志大小和日期分割

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
     add-properties: false
 logging:
   level:
-    root: info
+    com.example: debug
 mybatis-plus:
   type-enums-package: com.example.enums
   configuration:
