--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,10 @@
             <artifactId>spring-context-support</artifactId>
             <version>3.2.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
