--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,6 +49,9 @@ spring:
             enable: true
             required: true
     #mail.smtp.auth=true;mail.smtp.starttls.enable=true;mail.smtp.starttls.required=true
+  aop:
+    auto: true
+    proxy-target-class: true # 使用CGLIB代理目标类，否则使用Java代码
 
 logging:
   level:
