--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,12 @@
             <version>2.0.0-RC.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
